<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/immo_log_in">

    <TextView
        android:id="@+id/titleForLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="Welcome to Real Estate Manager"
        android:textColor="#FFFFFF"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="Log In"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/welcomeText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#db3236"
        android:text="Log in with Google"
        android:textColor="#FFFFFF" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookLoginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleSignInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3b5998"
        android:text="Log in with Facebook"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/emailLoginButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="Log in with Email"
        android:backgroundTint="#007bff"
        android:textColor="#FFFFFF"
        android:layout_below="@id/facebookLoginButton"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You don't have an account? Create your account right now!"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/emailLoginButton"
        android:layout_marginTop="50dp"/>


    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="Create account"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"
        android:layout_below="@id/noAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>


</RelativeLayout>
